# docs/swagger.json
@@ -270,7 +270,7 @@
                 ],
                 "description": "Update bio, avatar, name or birthdate of user.",
                 "consumes": [
-                    "application/json"
+                    "multipart/form-data"
                 ],
                 "produces": [
                     "application/json"
@@ -281,13 +281,19 @@
                 "summary": "Update profile data",
                 "parameters": [
                     {
-                        "description": "Credentials for update profile data",
-                        "name": "credentials",
+                        "description": "JSON representation of profile data",
+                        "name": "profile_data",
                         "in": "body",
                         "required": true,
                         "schema": {
                             "$ref": "#/definitions/models.UpdateProfileRequestDTO"
                         }
+                    },
+                    {
+                        "type": "file",
+                        "description": "User avatar image",
+                        "name": "avatar",
+                        "in": "formData"
                     }
                 ],
                 "responses": {
@@ -298,7 +304,7 @@
                         }
                     },
                     "400": {
-                        "description": "Invalid format JSON",
+                        "description": "Failed to update profile",
                         "schema": {
                             "$ref": "#/definitions/responser.ErrorResponse"
                         }
@@ -478,9 +484,9 @@
         "models.GetProfileResponseDTO": {
             "type": "object",
             "properties": {
-                "avatarBase64": {
+                "avatarURL": {
                     "type": "string",
-                    "example": "this is Base64 photo"
+                    "example": "/2024_2_eaglesDesigners/uploads/avatar/f0364477-bfd4-496d-b639-d825b009d509.png"
                 },
                 "bio": {
                     "type": "string",
@@ -499,10 +505,6 @@
         "models.UpdateProfileRequestDTO": {
             "type": "object",
             "properties": {
-                "avatarBase64": {
-                    "type": "string",
-                    "example": "this is Base64 photo"
-                },
                 "bio": {
                     "type": "string",
                     "example": "Не люблю сети"
@@ -514,9 +516,6 @@
                 "name": {
                     "type": "string",
                     "example": "Vincent Vega"
-                },
-                "username": {
-                    "type": "string"
                 }
             }
         },
