# internal/profile/delivery/handlers.go
@@ -3,15 +3,15 @@ package delivery
 import (
 	"context"
 	"encoding/json"
+	"log"
 	"net/http"
 	"sync"
 
 	auth "github.com/go-park-mail-ru/2024_2_EaglesDesigner/internal/auth/models"
 	jwt "github.com/go-park-mail-ru/2024_2_EaglesDesigner/internal/jwt/usecase"
 	"github.com/go-park-mail-ru/2024_2_EaglesDesigner/internal/profile/models"
-	"github.com/go-park-mail-ru/2024_2_EaglesDesigner/internal/utils/base64helper"
+	multipartHepler "github.com/go-park-mail-ru/2024_2_EaglesDesigner/internal/utils/multipartHelper"
 	"github.com/go-park-mail-ru/2024_2_EaglesDesigner/internal/utils/responser"
-	"github.com/google/uuid"
 )
 
 const (
@@ -57,6 +57,8 @@ func New(usecase usecase, token token) *Delivery {
 func (d *Delivery) GetProfileHandler(w http.ResponseWriter, r *http.Request) {
 	ctx := r.Context()
 
+	log.Println("Profile delivery: пришел запрос на получение данных профиля")
+
 	user, ok := ctx.Value(auth.UserKey).(jwt.User)
 	if !ok {
 		responser.SendErrorResponse(w, userNotFoundError, http.StatusNotFound)
@@ -71,28 +73,7 @@ func (d *Delivery) GetProfileHandler(w http.ResponseWriter, r *http.Request) {
 		return
 	}
 
-	var avatarBase64 *string
-
-	if profileData.AvatarURL != nil {
-		avatarUUID, err := uuid.Parse(*profileData.AvatarURL)
-		if err != nil {
-			responser.SendErrorResponse(w, responseError, http.StatusBadRequest)
-			return
-		}
-
-		avatarBase64 = new(string)
-		*avatarBase64, err = base64helper.ReadPhotoBase64(avatarUUID)
-		if err != nil {
-			avatarBase64 = nil
-		}
-	}
-
-	response := models.GetProfileResponseDTO{
-		Name:         profileData.Name,
-		Bio:          profileData.Bio,
-		Birthdate:    profileData.Birthdate,
-		AvatarBase64: avatarBase64,
-	}
+	response := convertProfileDataToDTO(profileData)
 
 	jsonResp, err := json.Marshal(response)
 	if err != nil {
@@ -108,12 +89,13 @@ func (d *Delivery) GetProfileHandler(w http.ResponseWriter, r *http.Request) {
 // @Summary Update profile data
 // @Description Update bio, avatar, name or birthdate of user.
 // @Tags profile
-// @Accept json
+// @Accept multipart/form-data
 // @Produce json
 // @Security BearerAuth
-// @Param credentials body models.UpdateProfileRequestDTO true "Credentials for update profile data"
+// @Param profile_data body models.UpdateProfileRequestDTO true "JSON representation of profile data"
+// @Param avatar formData file false "User avatar image" example:"/2024_2_eaglesDesigners/uploads/avatar/f0364477-bfd4-496d-b639-d825b009d509.png"
 // @Success 200 {object} responser.SuccessResponse "Profile updated"
-// @Failure 400 {object} responser.ErrorResponse "Invalid format JSON"
+// @Failure 400 {object} responser.ErrorResponse "Failed to update profile"
 // @Failure 401 {object} responser.ErrorResponse "Unauthorized"
 // @Failure 404 {object} responser.ErrorResponse "User not found"
 // @Router /profile [put]
@@ -122,19 +104,45 @@ func (d *Delivery) UpdateProfileHandler(w http.ResponseWriter, r *http.Request) 
 	defer d.mu.Unlock()
 	ctx := r.Context()
 
-	user, err := d.token.GetUserByJWT(ctx, r.Cookies())
-	if err != nil {
+	log.Println("Profile delivery: пришел запрос на обновление профиля")
+
+	user, ok := ctx.Value(auth.UserKey).(jwt.User)
+	if !ok {
 		responser.SendErrorResponse(w, userNotFoundError, http.StatusNotFound)
 		return
 	}
 
 	var profile models.UpdateProfileRequestDTO
 
+	if err := r.ParseMultipartForm(10 << 20); err != nil {
+		log.Println("Profile delivery: не удалось распарсить запрос: ", err)
+		responser.SendErrorResponse(w, "Unable to parse form", http.StatusBadRequest)
+		return
+	}
+
 	profile.Username = user.Username
 
-	if err := json.NewDecoder(r.Body).Decode(&profile); err != nil {
-		responser.SendErrorResponse(w, invalidJSONError, http.StatusBadRequest)
+	jsonString := r.FormValue("profile_data")
+	if jsonString != "" {
+		if err := json.Unmarshal([]byte(jsonString), &profile); err != nil {
+			responser.SendErrorResponse(w, invalidJSONError, http.StatusBadRequest)
+			return
+		}
+	}
+
+	avatar, _, err := r.FormFile("avatar")
+	if err != nil && err != http.ErrMissingFile {
+		responser.SendErrorResponse(w, "Failed to get avatar", http.StatusBadRequest)
 		return
+	}
+	defer func() {
+		if avatar != nil {
+			avatar.Close()
+		}
+	}()
+
+	if avatar != nil {
+		profile.Avatar = &avatar
 	}
 
 	if err := d.usecase.UpdateProfile(ctx, profile); err != nil {
@@ -143,4 +151,19 @@ func (d *Delivery) UpdateProfileHandler(w http.ResponseWriter, r *http.Request) 
 	}
 
 	responser.SendOKResponse(w, "Profile updated", http.StatusOK)
+}
+
+func convertProfileDataToDTO(profileData models.ProfileData) models.GetProfileResponseDTO {
+	var avatarURL *string
+	if profileData.AvatarPath != nil {
+		path := multipartHepler.GetAbsolutePath(*profileData.AvatarPath)
+		avatarURL = &path
+	}
+
+	return models.GetProfileResponseDTO{
+		Name:      profileData.Name,
+		Bio:       profileData.Bio,
+		AvatarURL: avatarURL,
+		Birthdate: profileData.Birthdate,
+	}
 }
